--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="../src/images/turbo.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Test</title>
+    <title>USA map</title>
   </head>
   <body>
     <div id="root"></div>
